# mortenvistisen

./: .air.toml  .dockerignore  .env.example  .gitignore  AGENT.md  AGENTS.md  CLAUDE.md  CONTEXT.md  Cargo.toml  Dockerfile  README.md  base.css  build-and-push.sh  fly.toml  go.mod  go.sum  justfile  package-lock.json  package.json  river_all_w_1.up.sql  set_envs.sh  sqlc.yaml  sqlx-data.json  vite.config.js
bak/: .dockerignore  go.sum  package-lock.json  package.json
clients/: email.go
config/: app.go  authentication.go  aws_ses.go  config.go  telemetry.go
controllers/: api.go  article.go  articles.go  assets.go  authentication.go  confirmations.go  controller.go  dashboard.go  home.go  newsletters.go  pages.go  post.go  projects.go  registrations.go  reset_passwords.go  sessions.go  subscriber_unsubscribe.go  subscribers.go  subscription.go  tags.go  user.go
css/: base.css  basecoat.css  components.css  easymde.css  theme.css
database/: database.go  sqlc.yaml  test_helper.go
docker/: .env.prod.example  README.prod.md  docker-compose.app-telemetry.yml  docker-compose.vps-telemetry.yml  docker-compose.yml
domain/: article.go  article_test.go  errors.go  newsletter.go  newsletter_test.go  post.go  rules.go  subscriber.go  subscriber_test.go  tag.go  token.go  user.go  user_test.go  validations.go
email/: components.templ  components_templ.go  new_article_notification.templ  new_article_notification_templ.go  newsletter_release.templ  newsletter_release_templ.go  verify_newsletter_subscription.templ  verify_newsletter_subscription_templ.go
emails/: base.templ  base_templ.go  base_two.templ  base_two_templ.go  components.templ  components_templ.go  emails.go  newsletter.templ  newsletter_templ.go  newsletter_welcome.templ  newsletter_welcome_templ.go  password_reset.templ  password_reset_templ.go  postmark_components.templ  postmark_components_templ.go  signup_welcome.templ  signup_welcome_templ.go  subscriber_welcome.templ  subscriber_welcome_templ.go
entity/: post.go
handlers/: api.go  app.go  asset.go  authentication.go  authentication_integration_test.go  cache.go  dashboard.go  fragments.go  handler.go  handler_integration_test.go  registration.go  registration_integration_test.go
http/: middleware.go  server.go
migrations/: 00008_create_subscriber_tokens_table.sql  20230219171258_create_user_tbl.sql  (+10 more)
(+912 files in other folders)
