[package]
name = "mortenvistisen_blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tera = "1"
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
env_logger = "0.9.0"
lazy_static = "1.4.0"
actix-files = "0.6.1"
pulldown-cmark = { version = "0.9.1", default-features = false }
ignore = "0.4"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.32"
uuid = { version = "1.2.2", features = ["v4"] }
chrono = "0.4.23"
reqwest = { version = "0.11.14", default-features = false, features = ["json", "rustls-tls"] }
validator = "0.16.0"


[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline",
]
