[package]
name = "mortenvistisen_blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tera = "1"
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
env_logger = "0.9.0"
lazy_static = "1.4.0"
actix-files = "0.6.1"
pulldown-cmark = { version = "0.9.1", default-features = false }
ignore = "0.4"
toml = "0.5"
serde = { version = "1.0", features = ["derive", "serde_derive"] }
serde_json = "1.0"
thiserror = "1.0.32"
uuid = { version = "1.2.2", features = ["v4"] }
chrono = "0.4.23"
reqwest = { version = "0.11.14", default-features = false, features = ["json", "rustls-tls"] }
validator = "0.16.0"
secrecy = { version = "0.8.0", features = ["serde"] }
rand = { version = "0.8.5", features = ["std_rng"] }
config = "0.13.3"
serde-aux = "4.1.2"
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.6"
tracing-log = "0.1.3"
tracing-actix-web = "0.7.2"
sentry-tracing = "0.29.2"
sentry = "0.27.0"

[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline",
]
